# ICP-Token

./: README.md  dfx.json
src/: fungible_token_backend.did
src/fungible_token_backend/: Cargo.toml
src/fungible_token_backend/src/: error.rs  main.rs  token_logic.rs  types.rs
src_frontend/: package.json  tailwind.config.js
src_frontend/public/: index.html
src_frontend/src/: App.jsx  index.js
src_frontend/src/components/: BalanceCard.jsx  MintPanel.jsx  TimerDisplay.jsx  TransferForm.jsx
