[package]
name = "fungible_token_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
candid = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rand = "0.8"
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
